@@ -10,10 +10,10 @@ mmcif >= 0.35
 rcsb.utils.config >= 0.17
 rcsb.utils.io >= 0.30
 rcsb.utils.multiproc >= 0.12
-rcsb.utils.chemref >= 0.18
+rcsb.utils.chemref >= 0.19
 rcsb.utils.validation >= 0.13
 scandir; python_version < "3.0"
 configparser; python_version < "3.0"
 rcsb.utils.ec >= 0.10
 rcsb.utils.taxonomy >= 0.13
-rcsb.utils.struct >= 0.12
+rcsb.utils.struct >= 0.13
