@@ -69,10 +69,10 @@ setup(
                       'rcsb.utils.config >= 0.16',
                       'rcsb.utils.multiproc >= 0.12',
                       'rcsb.utils.validation >= 0.13',
-                      'rcsb.utils.chemref >= 0.18',
+                      'rcsb.utils.chemref >= 0.19',
                       'rcsb.utils.ec >= 0.10',
                       'rcsb.utils.taxonomy >= 0.13',
-                      'rcsb.utils.struct >= 0.12'],
+                      'rcsb.utils.struct >= 0.13'],
     packages=find_packages(exclude=['rcsb.db.tests', 'rcsb.db.tests-*', 'tests.*']),
     package_data={
         # If any package contains *.md or *.rst ...  files, include them:
