@@ -122,4 +122,5 @@
                         MySQL SchemaDefLoader skip zero values #19
   3-Apr-2019   V0.53 added private schema property _primary_key to mark attributes that are part of an object primary key.
                This feature is controlled by 'addPrimaryKey' enforceOpts property.
-  7-Apr-2019   V0.54 adding support for integrating CATH adn SCOP structural classifiers and sequence difference type counts.
+  7-Apr-2019   V0.54 adding support for integrating CATH and SCOP structural classifiers and sequence difference type counts.
+ 11-Apr-2019   V0.55 add tree loaders to etl cli tool, add entity_instance_validation, add a variety of counts, add atc codes.
